# faster_coco_eval

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.html  README.md  auto_build.sh  clean.sh  coco.html  coco_eval.html  examples.html  faster_eval_api.html  genindex.html  history.html  history.md  index.html  mask.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/: CODEOWNERS
_sources/: README.md.txt  faster_eval_api.rst.txt  mask.rst.txt
_static/: custom_nbsphinx.css  documentation_options.js
csrc/: faster_eval_api.cpp  vision.cpp
docker/: Dockerfile  auto_build.sh  build_pipeline.sh
examples/: ced_example.ipynb  crowdpose_example.html  crowdpose_example.ipynb  curve_example.html  curve_example.ipynb  eval_example.html  eval_example.ipynb  lvis_example.html  lvis_example.ipynb  show_example.html  show_example.ipynb
fast_coco_eval/: __init__.py  fast_eval_api.py
faster_coco_eval/: __init__.py  coco.py  cocoeval.py  curves.py  error_calc.py  faster_eval_api.py  info.py  version.py
requirements/: docs.txt  extra.txt  optional.txt  runtime.txt  tests.txt
tests/: README.md  basic.py  test_basic.py  test_boundary.py  test_coco_metric.py  test_cocoapi_fake_data.py  test_crowdpose.py  test_dataset.py  test_extensive_pycocotools_comparison.py  test_extra_draw.py  test_extra_utils.py  test_init_pycocotools.py  test_keypoints.py  test_lvis_metric.py  test_mask_api.py  test_ranges.py  test_simple_extra.py  (+2 more)
(+78 files in other folders)
